Remove MaxPermSize sbt build param.